--- a/src/main/resources/templates/admin/sidebar/eng.html
+++ b/src/main/resources/templates/admin/sidebar/eng.html
@@ -4,42 +4,24 @@
         <h3>General</h3>
         <ul class="nav side-menu">
             <li>
-                <a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                <a><i class="fa fa-home"></i> Users <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                    <li><a href="/">Welcome</a></li>
+
                     <li><a href="/users">Users</a></li>
-                    <li><a href="/newUser">Add Users</a></li>
-                    <li><a href="/newRole">Add Role</a></li>
+                    <li><a href="/newUser">Add User</a></li>
+
 
 
                 </ul>
             </li>
 
-            <li><a><i class="fa fa-table"></i> Income Delivery <span class="fa fa-chevron-down"></span></a>
+            <li><a><i class="fa fa-cube"></i> Delivery <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                     <li><a href="/incDel">All</a></li>
                     <li><a href="/incDel/new">New</a></li>
 
                 </ul>
             </li>
-
-            <li>
-                <a><i class="fa fa-cube"></i> Boxes <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                    <li><a href="/box">Boxes</a></li>
-                    <li class="fa fa-cubes"><a href="/addBox">Add Box</a></li>
-
-                </ul>
-            </li>
-
-            <li>
-                <a><i class="fa fa-edit"></i> Parcels <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                    <li><a href="/parcels">Parcels</a></li>
-                    <li><a href="/newParcel">Create Parcel</a></li>
-                </ul>
-            </li>
-
 
             <li>
                 <a><i class="fa fa-money"></i> Balance <span class="fa fa-chevron-down"></span></a>
