--- a/src/main/resources/templates/login1.html
+++ b/src/main/resources/templates/login1.html
@@ -7,19 +7,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title> Admin Panel | </title>
+    <title> Admin Panel HTML| </title>
 
-    <!-- Bootstrap -->
-    <link href="${url}css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="${url}css/font-awesome.min.css" rel="stylesheet">
-    <!-- NProgress -->
-    <link href="${url}css/nprogress.css" rel="stylesheet">
-    <!-- Animate.css -->
-    <link href="${url}/css/animate.min.css" rel="stylesheet">
 
-    <!-- Custom Theme Style -->
-    <link href="${url}css/custom.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" media="all"
+          href="../static/css/bootstrap.min.css" th:href="@{../css/bootstrap.min.css}"/>
+
+    <link rel="stylesheet" type="text/css" media="all"
+          href="../static/font-awesome/css/font-awesome.min.css" th:href="@{../css/font-awesome.min.css}"/>
+
+    <link rel="stylesheet" type="text/css" media="all"
+          href="../static/css/nprogress.css" th:href="@{../css/nprogress.css}"/>
+    <link rel="stylesheet" type="text/css" media="all"
+          href="../static/css/animate.min.css" th:href="@{../css/animate.min.css}"/>
+
+
+
+    <link rel="stylesheet" type="text/css" media="all"
+          href="../css/custom.min.css" th:href="@{../css/custom.min.css}"/>
+
+ <
+
+
+
 </head>
 
 <body class="login">
@@ -48,9 +59,9 @@
                     </div>
                     <div>
 
-                        <input type="hidden"
-                               name="${_csrf.parameterName}"
-                               value="${_csrf.token}"/>
+                        <input type="hidden" name="${_csrf.parameterName}"
+                               value="${_csrf.token}" />
+
 
                         <button type="submit" class="btn btn-default submit">Log in</button>
                         <a class="reset_pass" href="/">Lost your password?</a>
@@ -59,6 +70,7 @@
                     <#if error?exists>
                         <div style="margin-top: 5px; color: red">
                             <small>Wrong Login or Password</small>
+                            <p>${error}</p>
                         </div>
 
                     </#if>
