--- a/src/main/resources/templates/root/navigation/eng.html
+++ b/src/main/resources/templates/root/navigation/eng.html
@@ -61,10 +61,19 @@
                 </li>
 
                 <li>
+
+                    <a class="page-scroll animated zoomIn contacts" href="/log">
+
+                        <i class="fa fa-sign-out " aria-hidden="true">Log In</i> <!--style="margin-top: -2em"-->
+                    </a>
+                </li>
+
+                <li>
                     <div class="dropdown cursorIn" style="margin-top: 5px;margin-left: 180px">
-                        <option class="dropdown-toggle" data-toggle="dropdown"><img src="img/flags/${locale}Sq.png"
-                                                                                    class="img-responsive img-centered"
-                                                                                    alt="">
+                        <option class="dropdown-toggle" data-toggle="dropdown">
+                            <img src="img/flags/${locale}Sq.png"
+                                 class="img-responsive img-centered"
+                                 alt="">
                         </option>
                         <ul class="dropdown-menu">
 
@@ -80,13 +89,9 @@
 
                 </li>
                 <li>
-                    <a class="page-scroll animated zoomIn contacts" href="/admin">
-                        <#if isAnonym?exists>
-                            <#if isAnonym =="">
-                                <i class="fa fa-sign-out fa-2x" style="margin-top: -2em" aria-hidden="true"></i>
-                            </#if>
-                        </#if>
-                        ${principal}
+
+                    ${principal}
+
                     </a>
                 </li>
 
