--- a/src/main/resources/templates/admin/incDel/eng.html
+++ b/src/main/resources/templates/admin/incDel/eng.html
@@ -1,4 +1,4 @@
-<div class="row" xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml">
+<div class="row" xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml" ng-contoller="incDelFormNewControllerAng">
 
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
@@ -245,7 +245,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="myModal" role="dialog">
+<div class="modal fade" id="myModal" role="dialog" ng-controller="incDelFormAddNewOrderControllerAng">
     <div class="modal-dialog">
 
         <!-- Modal content-->
