--- a/src/main/resources/templates/static/cssAdmin.html
+++ b/src/main/resources/templates/static/cssAdmin.html
@@ -1,3 +1,7 @@
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+<script src="https://code.angularjs.org/1.3.9/angular.js"></script>
+<script src="https://code.angularjs.org/1.3.9/angular-resource.js"></script>
+
 
 
 <link href="${url}css/jquery.mCustomScrollbar.min.css" rel="stylesheet">
