--- a/src/main/resources/templates/testingData.html
+++ b/src/main/resources/templates/testingData.html
@@ -1,4 +1,11 @@
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
 
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+
+<body>
+
+<div th:fragment="http">
 <div> <br/> @Model : <span th:text="${principal}"></span>
 
     <br/> username <span th:text="${username}"></span>
@@ -42,3 +49,6 @@
     <br/>
 </div>
 
+</div>
+</body>
+</html>
