--- a/src/main/resources/templates/admin/content.html
+++ b/src/main/resources/templates/admin/content.html
@@ -9,7 +9,7 @@
 <div th:fragment="incDel">
 
     <div class="row" xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml"
-         ng-contoller="incDelFormAddNewOrderControllerAng">
+         ng-contoller="Ctrl">
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
@@ -20,10 +20,18 @@
                     <h2>
                         customs declaration CN23
 
+                        <span th:text="${incDel.id}"></span>
+
+                        <span th:text="${incDel.number}"></span>
+
+
+
+
                     </h2>
+                    <br/>
                     <span th:text="${error}"></span>
                     <ul>
-                        <li th:each="err : ${#fields.errors('*')}" th:text="${err}" />
+                        <li th:each="err : ${#fields.errors('*')}" th:text="${err}"/>
                     </ul>
 
                     <ul class="nav navbar-right panel_toolbox">
@@ -48,7 +56,8 @@
 
                 <div class="x_content">
 
-                    <form method="POST" name="incDel" action="/incDel/new" class="form-horizontal " th:object="${incDel}" th:action="@{/incDel/new}">
+                    <form method="POST" name="incDel" action="/incDel/new" class="form-horizontal "
+                          th:object="${incDel}" th:action="@{/incDel/new}">
                         <!--form-label-left input_mask   -->
 
                         <div class="row" style="margin-top:5px">
@@ -64,15 +73,17 @@
                                        placeholder="Supplier company name" name="supplier" th:field="*{supplier}"/>
 
                                 <ul>
-                                    <li style="color:red;" th:each="err : ${#fields.errors('supplier')}" th:text="${err}" ></li>
+                                    <li style="color:red;" th:each="err : ${#fields.errors('supplier')}"
+                                        th:text="${err}"></li>
 
                                 </ul>
                             </div>
 
+
                             <div class="col-md-4 col-sm-4 col-xs-6">
                                 <input type="text" class="form-control" required="required"
                                        placeholder="Currier Company delivery tracking number"
-                                       name="currierTrackNumber"/>
+                                       name="currierTrackNumber" th:field="*{currierTrackNumber}"/>
                             </div>
                             <label class="col-md-2 col-sm-2 col-xs-6">Tracking
                                 <a href="#" data-toggle="tooltip" title="'
@@ -93,12 +104,16 @@
                             </label>
                             <div class="col-md-4 col-sm-4 col-xs-6">
                                 <input type="text" class="form-control" required="required"
-                                       placeholder="City Street House Room">
+                                       placeholder="City Street House Room" th:field="*{destinationFROM}">
                             </div>
 
                             <div class="col-md-4 col-sm-4 col-xs-6">
-                                <input type="text" class="form-control" required="required"
-                                       placeholder="Invoice number from supplier" name="supplierInvoice"/>
+                                <input type="text"
+                                       class="form-control"
+                                       required="required"
+                                       placeholder="Invoice number from supplier"
+                                       name="supplierInvoice"
+                                       th:field="*{supplierInvoice}"/>
                             </div>
                             <label class="col-md-2 col-sm-2 col-xs-6">Invoice
                                 <a href="#" data-toggle="tooltip" title="
@@ -161,7 +176,8 @@
                         <div class="container">
 
                             <!-- Trigger the modal with a button -->
-                            <button type="button" class="btn btn-default btn-md" data-toggle="modal" data-target="#myModal">
+                            <button type="button" class="btn btn-default btn-md" data-toggle="modal"
+                                    data-target="#myModal">
                                 Add New Product
                             </button>
 
@@ -180,7 +196,7 @@
                                     <tr class="headings">
                                         <th>
                                             <input type="checkbox" id="check-all" class="flat">
-                                            <input type="hidden" name="id"/>
+                                            <!--<input type="hidden" name="id"/>-->
                                         </th>
 
 
@@ -202,15 +218,17 @@
 
                                     <tbody>
 
-                                    <div ng-repeat="order in orderstIncDelList">
+                                    <!--<div ng-repeat="order in ordersIncDelList">-->
 
-                                        <tr class="even pointer">
+
+                                        <tr th:each="order,iterationStatus  : ${ordersIncDelList} " class="even pointer">
                                             <td class="a-center ">
-                                                <input type="checkbox" class="flat" name="table_records">
+                                                <!--<input type="checkbox" class="flat" name="table_records">-->
+                                        <td th:text="${iterationStatus.count}">1</td>
                                             </td>
-                                            <td class=" ">${{order.productName}}</td>
-                                            <td class=" ">${{order.url}}</td>
-                                            <td class=" ">${{order.qty}} </i></td>
+                                            <td class=" " th:text="${order.productName}"></td>
+                                            <td class=" " th:text="${order.url}"></td>
+                                            <td class=" " th:text="${order.qty}"></td>
                                             <td class=" "><i class="fa fa-usd" aria-hidden="true"></i>
                                                 340
                                             </td>
@@ -227,7 +245,7 @@
                                         </tr>
 
 
-                                    </div>
+                                    <!--</div>   ng-reapit -->
                                     </tbody>
                                 </table>
                             </div>
@@ -239,8 +257,12 @@
                             <div class="form-group">
                                 <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3" style="margin-top:1%">
 
+                                    <!--<input type="text" name="id" th:field="*{id}"/>-->
+                                    <!--<input type="text" name="number" th:field="*{number}"/>-->
                                     <input type="hidden" name="${_csrf.parameterName}"
                                            value="${_csrf.token}"/>
+
+                                    <span th:text="${info}"></span>
 
                                     <button type="reset" class="btn btn-primary">Cancel</button>
                                     <button type="submit" class="btn btn-success">Submit</button>
@@ -262,7 +284,7 @@
 
 
     <!-- Modal -->
-    <div class="modal fade" id="myModal" role="dialog" ng-controller="incDelFormAddNewOrderControllerAng">
+    <div class="modal fade" id="myModal" role="dialog" ng-controller="Ctrl">
         <div class="modal-dialog">
 
             <!-- Modal content-->
@@ -276,49 +298,65 @@
                 <div class="modal-body">
 
 
-                    <!--<form action="/product/new/">-->
+                    <form method="POST" name="incDel" action="#" class="form-horizontal "
+                          th:object="${orderIncDel}" th:action="@{orderProduct/add}">
 
-                    <div class="row">
-                        <div class="form-group">
+                        <div class="row">
+                            <div class="form-group">
 
-                        </div>
-                        <label for="sel1" class="control-label col-md-2 col-sm-2 col-xs-6">Product </label>
+                            </div>
+                            <label for="sel1" class="control-label col-md-2 col-sm-2 col-xs-6">Product </label>
 
-                        <div class="col-md-5 col-sm-4 col-xs-6">
-                            <select class="form-control" id="sel1" ng-modal="productName">
-                                <option>Close</option>
-                                <option>Shoes</option>
+                            <!--<div class="col-md-5 col-sm-4 col-xs-6">-->
+                                <!--<div class="form-control" id="sel1" ng-modal="productName" th:field="*{productName}">-->
+                                    <!--<div>-->
+                                        <!--<option></option>-->
+                                        <!--<option>Shoes</option>-->
+                                    <!--</div>-->
+                                    <!--</select>-->
+                                <!--</div>-->
+                                <div class="col-md-2 col-sm-2 col-xs-4">
+                                    <input type="text"
+                                           class="form-control"
+                                           required="required"
+                                           placeholder="qty"
+                                           name="qty"
+                                           ng-modal="qty"
+                                           th:field="*{qty}"/>
+                                </div>
+                                <div class="col-md-2 col-sm-2 col-xs-4">
+                                    <input type="text"
+                                           class="form-control"
+                                           required="required"
+                                           placeholder="usd"
+                                           name="price"
+                                           ng-modal="price"
+                                           th:field="*{price}"/>
+                                </div>
 
-                            </select>
-                        </div>
-                        <div class="col-md-2 col-sm-2 col-xs-4">
-                            <input type="text" class="form-control" required="required"
-                                   placeholder="qty" name="qty" ng-modal="qty"/>
-                        </div>
-                        <div class="col-md-2 col-sm-2 col-xs-4">
-                            <input type="text" class="form-control" required="required"
-                                   placeholder="usd" name="price" ng-modal="price"/>
-                        </div>
 
+                                <label for="url" class="control-label col-md-2 col-sm-2 col-xs-2"
+                                       style="margin-top:2%">URL </label>
+                                <div class="col-md-10 col-sm-10 col-xs-10" style="margin-top:2%">
+                                    <input id="url" type="text" class="form-control" required="required"
+                                           placeholder=" enter the website link to your product "
+                                           name="url" ng-modal="url"
+                                           th:field="*{url}"/>
+                                </div>
 
-                        <label for="url" class="control-label col-md-2 col-sm-2 col-xs-2"
-                               style="margin-top:2%">URL </label>
-                        <div class="col-md-10 col-sm-10 col-xs-10" style="margin-top:2%">
-                            <input id="url" type="text" class="form-control" required="required"
-                                   placeholder=" enter the website link to your product " name="url" ng-modal="url"/>
-                        </div>
+                                <!--<a href="#" data-toggle="tooltip" title="add new product">-->
+                                <!--<i class="fa fa-info-circle fa-1x" aria-hidden="true"></i></a>-->
+                            </div>
+                            <br/>
 
-                        <!--<a href="#" data-toggle="tooltip" title="add new product">-->
-                        <!--<i class="fa fa-info-circle fa-1x" aria-hidden="true"></i></a>-->
-                    </div>
-                    <br/>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-default" ng-click="add()" ng-enter="update()">Add
+                                    Product
+                                </button>
+                                <button type="button" class="btn " data-dismiss="modal">Close</button>
 
-                    <div class="modal-footer">
-                        <button type="submit" class="btn btn-default" ng-click="add()" ng-enter="update()">Add Product</button>
-                        <button type="button" class="btn " data-dismiss="modal">Close</button>
-
-                    </div>
-                    <!--</form>-->
+                            </div>
+                    </form>
 
 
                 </div>   <!--modal body end-->
@@ -329,11 +367,7 @@
     </div>
 
 
-
-
-<!--</div>-->
-
-
+    <!--</div>-->
 
 
 </div> <!--////////////////////////////////////////////////////////////////////////////////////-->
