add + delete orderIncDel Working

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -77,7 +77,7 @@
 
                 <br/>
 
-                <div th:include="admin/sidebar :: eng"></div>
+                <div th:include="admin/sidebar :: eng2"></div>
 
 
             </div>
