--- a/src/main/resources/templates/admin/content.html
+++ b/src/main/resources/templates/admin/content.html
@@ -194,25 +194,23 @@
                                 <table class="table table-striped jambo_table bulk_action">
                                     <thead>
                                     <tr class="headings">
-                                        <th>
-                                            <input type="checkbox" id="check-all" class="flat">
-                                            <!--<input type="hidden" name="id"/>-->
-                                        </th>
-
-
-                                        <th class="column-title">productName</th>
+                                        <th class="column-title">num</th>
+                                        <th class="column-title">product Name</th>
                                         <th class="column-title">url</th>
                                         <th class="column-title">qty</th>
-                                        <th class="column-title">price <i class="fa fa-usd" aria-hidden="true"></i>
+                                        <th class="column-title">price
                                         </th>
-                                        <th class="column-title">Amount</th>
+                                        <th class="column-title">
+                                            <i class="fa fa-usd" aria-hidden="true"></i>
+                                            Amount
+                                        </th>
                                         <th class="column-title">Status</th>
                                         <th class="column-title no-link last"><span class="nobr">Action</span>
                                         </th>
-                                        <th class="bulk-actions" colspan="7">
-                                            <a class="antoo" style="color:#fff; font-weight:500;">Bulk Actions ( <span
-                                                    class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i></a>
-                                        </th>
+                                        <!--<th class="bulk-actions" colspan="7">-->
+                                            <!--<a class="antoo" style="color:#fff; font-weight:500;">Bulk Actions ( <span-->
+                                                    <!--class="action-cnt"> </span> ) <i class="fa fa-chevron-down"></i></a>-->
+                                        <!--</th>-->
                                     </tr>
                                     </thead>
 
@@ -221,16 +219,15 @@
                                     <!--<div ng-repeat="order in ordersIncDelList">-->
 
 
-                                        <tr th:each="order,iterationStatus  : ${ordersIncDelList} " class="even pointer">
-                                            <td class="a-center ">
-                                                <!--<input type="checkbox" class="flat" name="table_records">-->
-                                        <td th:text="${iterationStatus.count}">1</td>
-                                            </td>
+                                        <tr th:each="order,iterationStatus  : ${ordersIncDelList} " >
+
+                                            <td th:text="${iterationStatus.count}">1</td>
                                             <td class=" " th:text="${order.productName}"></td>
                                             <td class=" " th:text="${order.url}"></td>
                                             <td class=" " th:text="${order.qty}"></td>
-                                            <td class=" "><i class="fa fa-usd" aria-hidden="true"></i>
-                                                340
+                                            <td class=" " th:text="${order.price}">
+                                                <i class="fa fa-usd" aria-hidden="true"></i>
+
                                             </td>
                                             <td class=" "><i class="fa fa-usd" aria-hidden="true"></i>
                                                 680
@@ -238,10 +235,14 @@
                                             <td class="a-right a-right ">Paid</td>
                                             <td class="last">
                                                 <a href="#"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-                                                <a href="#" style="margin-left: 10px"><i class="fa fa-trash-o"
+
+                                                <a th:href="@{'/incDel/orderProduct/del'(orderId=${order.id})}"
+
+                                                   style="margin-left: 10px"><i class="fa fa-trash-o"
                                                                                          aria-hidden="true"></i></a>
 
                                             </td>
+
                                         </tr>
 
 
@@ -310,7 +311,7 @@
 
                             <div class="col-md-5 col-sm-4 col-xs-6">
 
-                                <select th:field="*{productName}">
+                                <select class="form-control" th:field="*{productName}">
                                     <option th:each="product : ${productsList}" th:value="${product}" th:text="${product}">Product</option>
                                 </select>
 
@@ -326,7 +327,7 @@
                                     <input type="text"
                                            class="form-control"
                                            required="required"
-                                           placeholder="qty"
+                                           th:placeholder="qty"
                                            name="qty"
                                            ng-modal="qty"
                                            th:field="*{qty}"/>
@@ -335,7 +336,7 @@
                                     <input type="text"
                                            class="form-control"
                                            required="required"
-                                           placeholder="usd"
+                                           th:placeholder="usd"
                                            name="price"
                                            ng-modal="price"
                                            th:field="*{price}"/>
