--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -7,7 +7,7 @@
 
 <div th:fragment="eng1">
     <!-- sidebar menu -->
-    <div id="sidebar-menu1" class="main_menu_side hidden-print main_menu">
+    <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
         <div class="menu_section">
             <h3>General</h3>
             <ul class="nav side-menu">
@@ -17,8 +17,6 @@
 
                         <li><a href="/users">Users</a></li>
                         <li><a href="/newUser">Add User</a></li>
-
-
 
                     </ul>
                 </li>
@@ -75,7 +73,6 @@
     </div>
     <!-- /menu footer buttons -->
    </div> <!--/eng-->
-
 <!--===========================================================================================-->
 <!--////////////////////////////////////////////////////////////////////////////////////////////////////////-->
 <div th:fragment="rus">
@@ -148,65 +145,71 @@
     </div>
     <!-- /menu footer buttons -->
 </div> <!--/eng-->
-
+<!--////////////////////////////////////////////////////////////////////////////////////////////////////////-->
 <div th:fragment="eng2">
 
+
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
+
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
+
                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        <i class="fa fa-home"></i>  Collapsible Group Item #1
+                        <i class="fa fa-user fa-2x"></i> Users <span class="fa fa-chevron-down"></span>
                     </a>
 
                 </h4>
             </div>
-            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                     <ul >
-                        <li><a href="form.html">General Form</a></li>
-                        <li><a href="form_advanced.html">Advanced Components</a></li>
-                        <li><a href="form_validation.html">Form Validation</a></li>
-                        <li><a href="form_wizards.html">Form Wizard</a></li>
-                        <li><a href="form_upload.html">Form Upload</a></li>
-                        <li><a href="form_buttons.html">Form Buttons</a></li>
+
+                        <li><a href="/users"><i class="fa fa-arrow-right "></i> Users</a></li>
+                        <li><a href="/user/new"><i class="fa fa-arrow-right "></i>Add User</a></li>
+
                     </ul>
                 </div>
             </div>
         </div>
+
+
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingTwo">
                 <h4 class="panel-title">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Collapsible Group Item #2
+                        <i class="fa fa-cube"></i> Delivery <span class="fa fa-chevron-down"></span>
                     </a>
                 </h4>
             </div>
+
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                 <div class="panel-body">
                     <ul >
-                        <li><a href="form.html">General Form</a></li>
-                        <li><a href="form_advanced.html">Advanced Components</a></li>
-                        <li><a href="form_validation.html">Form Validation</a></li>
-                        <li><a href="form_wizards.html">Form Wizard</a></li>
-                        <li><a href="form_upload.html">Form Upload</a></li>
-                        <li><a href="form_buttons.html">Form Buttons</a></li>
+                        <li><a href="incDel/new">add new</a></li>
+                        <li><a href="incDel/all">all</a></li>
+
                     </ul>
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    Description <a href="/"></a>
                 </div>
             </div>
         </div>
+
+
+
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingThree">
                 <h4 class="panel-title">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Collapsible Group Item #3
+                        <i class="fa fa-money"></i> Balance <span class="fa fa-chevron-down"></span>
                     </a>
                 </h4>
             </div>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                 <div class="panel-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    Anim pariatur cliche
                 </div>
             </div>
         </div>
@@ -226,7 +229,11 @@
         <div class="menu_section">
             <h3>General</h3>
             <ul class="nav side-menu">
-                <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                <li>
+                    <a>
+                        <i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span>
+                    </a>
+
                     <ul class="nav child_menu">
                         <li><a href="index.html">Dashboard</a></li>
                         <li><a href="index2.html">Dashboard2</a></li>
