--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -14,16 +14,16 @@
 
 
     <link rel="stylesheet" type="text/css" media="all"
-    href="../static/css/bootstrap.min.css" th:href="@{../css/bootstrap.min.css}"/>
+          href="../static/css/bootstrap.min.css" th:href="@{../css/bootstrap.min.css}"/>
 
     <link rel="stylesheet" type="text/css" media="all"
           href="../static/font-awesome/css/font-awesome.min.css" th:href="@{../css/font-awesome.min.css}"/>
 
     <link rel="stylesheet" type="text/css" media="all"
-    href="../static/css/nprogress.css" th:href="@{../css/nprogress.css}"/>
+          href="../static/css/nprogress.css" th:href="@{../css/nprogress.css}"/>
 
     <link rel="stylesheet" type="text/css" media="all"
-    href="../css/customn.min.css" th:href="@{../css/custom.min.css}"/>
+          href="../css/customn.min.css" th:href="@{../css/custom.min.css}"/>
 
     <!--&lt;!&ndash;<script th:src="@{../static/js/customs/appPublic.js}"></script>&ndash;&gt;-->
     <!--<script src="../appPublic.js" th:src="@{../public/appPublic.js}"></script>-->
@@ -36,12 +36,13 @@
 
     <script src="../static/js/fastclick.js" th:src="@{../js/fastclick.js}"></script>
 
-    <script src="../static/js/jquery.mCustomScrollbar.concat.min.js" th:src="@{../js/jquery.mCustomScrollbar.concat.min.js}"></script>
+    <script src="../static/js/jquery.mCustomScrollbar.concat.min.js"
+            th:src="@{../js/jquery.mCustomScrollbar.concat.min.js}"></script>
     <!--<script src="../static/js/custom.min.js" th:src="@{../js/custom.min.js}"></script>-->
 
 
     <!--<link rel="stylesheet" type="text/css" media="all"-->
-          <!--href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>-->
+    <!--href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>-->
 
 
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
@@ -86,42 +87,47 @@
         <div th:include="admin/navigation :: eng"></div>
 
 
-            <div class="right_col" role="main">
-                <div class=" ">
-                    <div class="page-title">
-                        <div class="title_left">
+        <div class="right_col" role="main">
+            <div class=" ">
+                <div class="page-title">
+                    <div class="title_left">
 
 
-                        </div>
                     </div>
-                    <!-- page content -->
-                    <!--<#&#45;&#45;=========================================================================================&ndash;&gt;-->
-
-
-                    <div th:include="admin/content :: incDel"></div>
-
-
-
-
-                        <!--<#include "admin/incDel/${locale}.html">-->
-                            <!--<#&#45;&#45;============================================================================================&ndash;&gt;-->
-
                 </div>
+                <!-- page content -->
+                <!--<#&#45;&#45;=========================================================================================&ndash;&gt;-->
+
+
+
+                <!--<div th:include="admin/incDel/new ::eng"></div>-->
+                <!--<div th:include="admin/incDel/new :: ${locale}"></div>-->
+        <!---->
+
+
+                <!--<div th:include="admin/incDel/new ::frag (registred,${locale})">registred not found</div>-->
+                <!--<div th:include="${uriReq} :: frag (client,${locale})">...</div>-->
+
+                <!--<div th:include="/incDel/new :: frag (client,${locale})">...</div>-->
+
+                <!--<div th:include="/incDel/registred :: frag (client,${locale})">...</div>-->
+                <div th:include="${uriReq} :: frag (client,${locale})">...</div>
+
+
+                <!--<div th:include="admin/incDel/new ::frag (onevar=${value1},twovar=${value2})">...</div>-->
+
+
+                <!--<#&#45;&#45;============================================================================================&ndash;&gt;-->
+
             </div>
+        </div>
 
-            <!-- /page content -->
-
-
-
-
+        <!-- /page content -->
 
 
         <div th:include="admin/footer :: eng"></div>
     </div>
 </div>
-
-
-
 
 
 </body>
