--- a/src/main/resources/templates/admin/footer.html
+++ b/src/main/resources/templates/admin/footer.html
@@ -10,7 +10,7 @@
     <!-- footer content -->
     <footer>
         <div class="pull-right">
-            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+            Info
         </div>
         <div class="clearfix"></div>
     </footer>
