--- a/src/main/resources/templates/admin/navigation.html
+++ b/src/main/resources/templates/admin/navigation.html
@@ -6,6 +6,9 @@
 <body>
 
 
+<div th:fragment="info">navigation info</div>
+<div th:fragment="frag (client,eng)"> frag (client,eng) </div>
+
 <div th:fragment="eng">
 
     <!-- top navigation -->
