--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -157,7 +157,7 @@
                 <h4 class="panel-title">
 
                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        <i class="fa fa-user"></i> Users <span class="fa fa-chevron-down"></span>
+                        <i class="fa fa-user fa-2x"></i> Users <span class="fa fa-chevron-down"></span>
                     </a>
 
                 </h4>
@@ -166,9 +166,13 @@
             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                     <ul >
-                        <li><a href="/users"><i class="fa fa-user "></i> Users</a></li>
-                        <li><a href="/user/new"><i class="fa fa-user "></i>Add User</a></li>
+                        <li><a href="/user/new"style="margin-top: 10%"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;Add </a></li>
+                        <br/>
+                        <li><a href="/users"><i class="fa fa-clone "></i> &nbsp;All</a></li>
+
+
                     </ul>
+                    <br/>
                     <input type="button" value="Load new document" onclick="newDoc()"/>
                 </div>
             </div>
@@ -179,7 +183,7 @@
             <div class="panel-heading" role="tab" id="headingTwo">
                 <h4 class="panel-title">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        <i class="fa fa-cube"></i> Delivery <span class="fa fa-chevron-down"></span>
+                        <i class="fa fa-cube fa-2x"></i> Delivery <span class="fa fa-chevron-down"></span>
                     </a>
                 </h4>
             </div>
@@ -187,11 +191,18 @@
             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                 <div class="panel-body">
                     <ul >
-                        <li><a href="/incDel/new" style="margin-top: 10%">add new</a></li>
-                        <li><a href="/incDel/all" style="margin-top: 10%">all</a></li>
+                       <p>
+
+                           <a href="/incDel/new" style="margin-top: 10%"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;add</a>
+                        </p>
+                        <br/>
+                        <p>
+                            <a href="/incDel/all" style="margin-top: 10%"><i class="fa fa-clone" aria-hidden="true"> </i>&nbsp; all</a>
+
+                        </p>
 
                     </ul>
-                    Description <a href="/"></a>
+
                 </div>
             </div>
         </div>
@@ -202,13 +213,14 @@
             <div class="panel-heading" role="tab" id="headingThree">
                 <h4 class="panel-title">
                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        <i class="fa fa-money"></i> Balance <span class="fa fa-chevron-down"></span>
+                        <i class="fa fa-money fa-2x"></i> Balance <span class="fa fa-chevron-down"></span>
                     </a>
                 </h4>
             </div>
             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                 <div class="panel-body">
-                    Anim pariatur cliche
+                   <!--menu here-->
+
                 </div>
             </div>
         </div>
