--- a/src/main/resources/templates/incDel/new.html
+++ b/src/main/resources/templates/incDel/new.html
@@ -5,16 +5,8 @@
 
 <body>
 
-<div th:fragment="eng">
-    <br/>
-    <h1> eng ${locale} </h1>
-</div> <!--////////////////////////////////////////////////////////////////////////////////////-->
-
 
 <div th:fragment="frag (client,eng)">
-    <span th:text="${uriReq}+' :: '+${locale}"></span>
-</div>
-<div th:fragment="frag (client,eng1)">
 
 
     <div class="row">
@@ -25,20 +17,8 @@
             <div class="x_panel">
 
                 <div class="x_title">
-                    <h2>
-                        customs declaration CN23
 
-                        <span th:text="${incDel.id}"></span>
-                        /
-                        <span th:text="${incDel.number}"></span>
-
-
-                    </h2>
-                    <br/>
-                    <span th:text="${error}"></span>
-                    <ul>
-                        <li th:each="err : ${#fields.errors('*')}" th:text="${err}"/>
-                    </ul>
+                         <h2>customs declaration CN23 NEW</h2>
 
                     <ul class="nav navbar-right panel_toolbox">
                         <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
@@ -176,7 +156,7 @@
                         </div>
 
 
-                        <div class="ln_solid"></div>
+
 
 
                         <div class="container">
@@ -238,11 +218,6 @@
 </div> <!--////////////////////////////////////////////////////////////////////////////////////-->
 
 
-
-
-<div th:fragment="">
-
-</div> <!--////////////////////////////////////////////////////////////////////////////////////-->
 
 
 </body>
