--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -152,31 +152,31 @@
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
 
-        <div class="panel panel-default">
-            <div class="panel-heading" role="tab" id="headingOne">
-                <h4 class="panel-title">
+        <!--<div class="panel panel-default">-->
+            <!--<div class="panel-heading" role="tab" id="headingOne">-->
+                <!--<h4 class="panel-title">-->
 
-                    <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        <i class="fa fa-user fa-2x"></i> Users <span class="fa fa-chevron-down"></span>
-                    </a>
+                    <!--<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">-->
+                        <!--<i class="fa fa-user fa-2x"></i> Users <span class="fa fa-chevron-down"></span>-->
+                    <!--</a>-->
 
-                </h4>
-            </div>
+                <!--</h4>-->
+            <!--</div>-->
 
-            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                <div class="panel-body">
-                    <ul >
-                        <li><a href="/user/new"style="margin-top: 10%"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;Add </a></li>
-                        <br/>
-                        <li><a href="/users"><i class="fa fa-clone "></i> &nbsp;All</a></li>
+            <!--<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">-->
+                <!--<div class="panel-body">-->
+                    <!--<ul >-->
+                        <!--<li><a href="/user/new"style="margin-top: 10%"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;Add </a></li>-->
+                        <!--<br/>-->
+                        <!--<li><a href="/users"><i class="fa fa-clone "></i> &nbsp;All</a></li>-->
 
 
-                    </ul>
-                    <br/>
-                    <input type="button" value="Load new document" onclick="newDoc()"/>
-                </div>
-            </div>
-        </div>
+                    <!--</ul>-->
+                    <!--<br/>-->
+                    <!--<input type="button" value="Load new document" onclick="newDoc()"/>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
 
         <div class="panel panel-default">
@@ -193,11 +193,11 @@
                     <ul >
                        <p>
 
-                           <a href="/incDel/new" style="margin-top: 10%"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;add</a>
+                           <a href="/incDel/new" style="margin-top: 10%"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>&nbsp;n e w</a>
                         </p>
                         <br/>
                         <p>
-                            <a href="/incDel/all" style="margin-top: 10%"><i class="fa fa-clone" aria-hidden="true"> </i>&nbsp; all</a>
+                            <a href="/incDel/all" style="margin-top: 10%"><i class="fa fa-clone" aria-hidden="true"> </i>&nbsp; a l l</a>
 
                         </p>
 
