--- a/src/main/resources/templates/incDel/registred.html
+++ b/src/main/resources/templates/incDel/registred.html
@@ -39,7 +39,7 @@
         </div>
         <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
             <span class="count_top"><i class="fa fa-user"></i> Total Summ</span>
-            <div class="count" th:text="${amountIncDel}">
+            <div class="count" th:text="${incDel.amount}">
 
             </div>
             <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>
