--- a/src/main/resources/templates/admin/navigation.html
+++ b/src/main/resources/templates/admin/navigation.html
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="">
                         <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-                            <img src="images/img.jpg" alt=""><span th:text="${principal}"></span>
+                            <img src="images/img.jpg" alt=""><i class="fa fa-user">&nbsp; <span th:text="${principal}"></span></i>
                             <span class=" fa fa-angle-down"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -61,7 +61,7 @@
                                     <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
+                          <span class="time">30 mins ago</span>
                         </span>
                         <span class="message">
                           Film festivals used to be do-or-die moments for movie makers. They were where...
@@ -73,7 +73,7 @@
                                     <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
+                          <span class="time">2 hours ago</span>
                         </span>
                         <span class="message">
                           Film festivals used to be do-or-die moments for movie makers. They were where...
@@ -85,7 +85,7 @@
                                     <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
+                          <span class="time">2 hours 3 mins ago</span>
                         </span>
                         <span class="message">
                           Film festivals used to be do-or-die moments for movie makers. They were where...
