--- a/src/main/resources/templates/incDel/new.html
+++ b/src/main/resources/templates/incDel/new.html
@@ -18,7 +18,7 @@
 
                 <div class="x_title">
 
-                         <h2>customs declaration CN23 NEW</h2>
+                         <h2>customs declaration CN23</h2>
 
                     <ul class="nav navbar-right panel_toolbox">
                         <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
